towards FAIRer metadata through h5tbx and jsonld integration

--- a/h5rdmtoolbox/data/style.css
+++ b/h5rdmtoolbox/data/style.css
@@ -182,3 +182,35 @@ input.h5tb-varname-in:checked + label:before {
 .h5tb-attr-list li:hover {
     background-color: rgba(0,0,0,.0);
 }
+
+
+/* Tooltip container */
+.tooltip {
+position: relative;
+display: inline-block;
+cursor: pointer;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+visibility: hidden;
+width: 300px;
+background-color: #555;
+color: #fff;
+text-align: center;
+border-radius: 6px;
+padding: 5px;
+position: absolute;
+z-index: 1;
+bottom: 125%;
+left: 50%;
+margin-left: -60px;
+opacity: 0;
+transition: opacity 0.3s;
+}
+
+/* Show the tooltip on hover */
+.tooltip:hover .tooltiptext {
+visibility: visible;
+opacity:  1;
+}
